@@ -37,6 +37,8 @@ Release ...
 * [nt]roff: The ".unformat" and ".asciify" requests have been added to
   remove the effects of adjustment, and font and point size information,
   respectively, from a diversion.
+* [nt]roff: The "\Z'string'" escape sequence (print string and restore
+  the position afterwards) has been introduced.
 * [nt]roff: The ".als" request has been added to create an alias name
   for a request, macro, or string.
 * [nt]roff: The ".aln" request has been added to create an alias name
